; ModuleID = '/home/carl/AnghaBench/freebsd/stand/libsa/extr_dosfs.c_ioread.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/libsa/extr_dosfs.c_ioread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@SECSIZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i32, i8*, i64)* @ioread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ioread(%struct.TYPE_3__* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %17 = load i32, i32* @SECSIZ, align 4
  %18 = zext i32 %17 to i64
  %19 = call i8* @llvm.stacksave()
  store i8* %19, i8** %14, align 8
  %20 = alloca i8, i64 %18, align 16
  store i64 %18, i64* %15, align 8
  %21 = load i8*, i8** %8, align 8
  store i8* %21, i8** %10, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @SECSIZ, align 4
  %24 = sub nsw i32 %23, 1
  %25 = and i32 %22, %24
  store i32 %25, i32* %11, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %69

27:                                               ; preds = %4
  %28 = load i32, i32* %11, align 4
  %29 = load i32, i32* %7, align 4
  %30 = sub nsw i32 %29, %28
  store i32 %30, i32* %7, align 4
  %31 = load i32, i32* @SECSIZ, align 4
  %32 = load i32, i32* %11, align 4
  %33 = sub nsw i32 %31, %32
  store i32 %33, i32* %12, align 4
  %34 = sext i32 %33 to i64
  %35 = load i64, i64* %9, align 8
  %36 = icmp ugt i64 %34, %35
  br i1 %36, label %37, label %40

37:                                               ; preds = %27
  %38 = load i64, i64* %9, align 8
  %39 = trunc i64 %38 to i32
  store i32 %39, i32* %12, align 4
  br label %40

40:                                               ; preds = %37, %27
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* %7, align 4
  %45 = call i32 @bytsec(i32 %44)
  %46 = trunc i64 %18 to i32
  %47 = call i32 @ioget(i32 %43, i32 %45, i8* %20, i32 %46)
  store i32 %47, i32* %13, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %40
  %50 = load i32, i32* %13, align 4
  store i32 %50, i32* %5, align 4
  store i32 1, i32* %16, align 4
  br label %122

51:                                               ; preds = %40
  %52 = load i8*, i8** %10, align 8
  %53 = load i32, i32* %11, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i8, i8* %20, i64 %54
  %56 = load i32, i32* %12, align 4
  %57 = call i32 @memcpy(i8* %52, i8* %55, i32 %56)
  %58 = load i32, i32* @SECSIZ, align 4
  %59 = load i32, i32* %7, align 4
  %60 = add nsw i32 %59, %58
  store i32 %60, i32* %7, align 4
  %61 = load i32, i32* %12, align 4
  %62 = load i8*, i8** %10, align 8
  %63 = sext i32 %61 to i64
  %64 = getelementptr inbounds i8, i8* %62, i64 %63
  store i8* %64, i8** %10, align 8
  %65 = load i32, i32* %12, align 4
  %66 = sext i32 %65 to i64
  %67 = load i64, i64* %9, align 8
  %68 = sub i64 %67, %66
  store i64 %68, i64* %9, align 8
  br label %69

69:                                               ; preds = %51, %4
  %70 = load i64, i64* %9, align 8
  %71 = load i32, i32* @SECSIZ, align 4
  %72 = sub nsw i32 %71, 1
  %73 = sext i32 %72 to i64
  %74 = and i64 %70, %73
  %75 = trunc i64 %74 to i32
  store i32 %75, i32* %12, align 4
  %76 = load i32, i32* %12, align 4
  %77 = sext i32 %76 to i64
  %78 = load i64, i64* %9, align 8
  %79 = sub i64 %78, %77
  store i64 %79, i64* %9, align 8
  %80 = icmp ne i64 %79, 0
  br i1 %80, label %81, label %103

81:                                               ; preds = %69
  %82 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %83 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %82, i32 0, i32 0
  %84 = load i32, i32* %83, align 4
  %85 = load i32, i32* %7, align 4
  %86 = call i32 @bytsec(i32 %85)
  %87 = load i8*, i8** %10, align 8
  %88 = load i64, i64* %9, align 8
  %89 = trunc i64 %88 to i32
  %90 = call i32 @ioget(i32 %84, i32 %86, i8* %87, i32 %89)
  store i32 %90, i32* %13, align 4
  %91 = icmp ne i32 %90, 0
  br i1 %91, label %92, label %94

92:                                               ; preds = %81
  %93 = load i32, i32* %13, align 4
  store i32 %93, i32* %5, align 4
  store i32 1, i32* %16, align 4
  br label %122

94:                                               ; preds = %81
  %95 = load i64, i64* %9, align 8
  %96 = load i32, i32* %7, align 4
  %97 = sext i32 %96 to i64
  %98 = add i64 %97, %95
  %99 = trunc i64 %98 to i32
  store i32 %99, i32* %7, align 4
  %100 = load i64, i64* %9, align 8
  %101 = load i8*, i8** %10, align 8
  %102 = getelementptr inbounds i8, i8* %101, i64 %100
  store i8* %102, i8** %10, align 8
  br label %103

103:                                              ; preds = %94, %69
  %104 = load i32, i32* %12, align 4
  %105 = icmp ne i32 %104, 0
  br i1 %105, label %106, label %121

106:                                              ; preds = %103
  %107 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %108 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %107, i32 0, i32 0
  %109 = load i32, i32* %108, align 4
  %110 = load i32, i32* %7, align 4
  %111 = call i32 @bytsec(i32 %110)
  %112 = trunc i64 %18 to i32
  %113 = call i32 @ioget(i32 %109, i32 %111, i8* %20, i32 %112)
  store i32 %113, i32* %13, align 4
  %114 = icmp ne i32 %113, 0
  br i1 %114, label %115, label %117

115:                                              ; preds = %106
  %116 = load i32, i32* %13, align 4
  store i32 %116, i32* %5, align 4
  store i32 1, i32* %16, align 4
  br label %122

117:                                              ; preds = %106
  %118 = load i8*, i8** %10, align 8
  %119 = load i32, i32* %12, align 4
  %120 = call i32 @memcpy(i8* %118, i8* %20, i32 %119)
  br label %121

121:                                              ; preds = %117, %103
  store i32 0, i32* %5, align 4
  store i32 1, i32* %16, align 4
  br label %122

122:                                              ; preds = %121, %115, %92, %49
  %123 = load i8*, i8** %14, align 8
  call void @llvm.stackrestore(i8* %123)
  %124 = load i32, i32* %5, align 4
  ret i32 %124
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @ioget(i32, i32, i8*, i32) #2

declare dso_local i32 @bytsec(i32) #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
